# cagle

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
homebrew/: cagle.rb.template
src/: main.rs
