[package]
name = "cagle"
version = "0.1.0"
edition = "2021"
description = "TUI tool to promote Claude Code project permissions to global settings"
license = "MIT"
repository = "https://github.com/jjroush/cagle"
homepage = "https://github.com/jjroush/cagle"
keywords = ["claude", "cli", "permissions", "tui"]
categories = ["command-line-utilities"]

[[bin]]
name = "cagle"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
crossterm = "0.28"
dirs = "6"
